Find a way around icon - text misalignment issue in codex buttons (#837)
* make text in all icon buttons its own span and style that

* remove padding as it worsens the issue on chrome

* Add explicit alignment to the icon as well


---------

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -348,6 +348,14 @@ dl.import-meta .download-csv {
 // is marked as resolved.
 .cdx-button {
     @include ui-text-M($font-weight-bold);
+
+    .text-with-icon-button {
+        vertical-align: text-top;
+        padding-left: 5px;
+    .cdx-icon {
+        vertical-align: text-top;
+    }
+  }
 }
 
 .svg {
